# metagate

./: .gitignore  Auth.txt  CMakeLists.txt  Initializer.txt  MainWindow.txt  Messenger  Messenger.txt  MetaGate.pro  MetaGate.txt  ProxyClient.txt  README.md  Transactions.txt  Utils.txt  WalletMetahash.a335356  WalletMetahash.desktop  WalletMetahash.icns  WalletMetahash.pro  WalletNames.txt  Wallets.txt  deployment.pri  libs-macos.pri  libs-unix.pri  libs-win.pri  login.html  login2.html  login3.html  loginProxyClient.html  loginTokens.html  loginUtils.html  loginWallets.html  svg1.qrc
UpdaterSettings/src/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  Settings.cpp  Settings.hpp  main.cpp
src/: A.h  AppUrlSchemeHandler.cpp  AppUrlSchemeHandler.h  BigNumber.cpp  BigNumber.h  BtcWallet.cpp  BtcWallet.h  CMakeLists.txt  CallbackWrapper.cpp  CallbackWrapper.h  EthWallet.cpp  EthWallet.h  HttpClient.cpp  HttpClient.h  JavascriptWrapper.cpp  JavascriptWrapper.h  Log.cpp  Log.h  MHUrlSchemeHandler.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  ManagerWrapper.h  ManagerWrapperImpl.h  MhPayEventHandler.cpp  MhPayEventHandler.h  Module.cpp  Module.h  NetwrokTesting.cpp  NetwrokTesting.h  NsLookup.cpp  NsLookup.h  PagesMappings.cpp  PagesMappings.h  Paths.cpp  Paths.h  QRegister.h  RunGuard.cpp  RunGuard.h  SlotWrapper.h  (+68 more)
src/ExternalConnector/: ExternalConnector.cpp  ExternalConnector.h  ExternalConnectorList.cpp  ExternalConnectorList.h  ExternalConnectorList.qrc  ExternalConnectorManager.cpp  ExternalConnectorManager.h
src/Initializer/: InitInterface.cpp  InitInterface.h  Initializer.cpp  Initializer.h  InitializerJavascript.cpp  InitializerJavascript.h  SharedFuture.h
src/Initializer/Inits/: InitAuth.cpp  InitAuth.h  InitJavascriptWrapper.cpp  InitJavascriptWrapper.h  InitMainwindow.cpp  InitMainwindow.h  InitMessenger.cpp  InitMessenger.h  InitMetaGate.cpp  InitMetaGate.h  InitNsLookup.cpp  InitNsLookup.h  InitProxy.cpp  InitProxy.h  InitProxyClient.cpp  InitProxyClient.h  InitTransactions.cpp  InitTransactions.h  InitUploader.cpp  InitUploader.h  InitUtils.cpp  InitUtils.h  InitWallets.cpp  InitWallets.h  InitWalletsNames.cpp  InitWalletsNames.h  InitWebSocket.cpp  InitWebSocket.h
src/Messenger/: CryptographicManager.cpp  CryptographicManager.h  Message.h  Messenger.cpp  Messenger.h  MessengerDBRes.h  MessengerDBStorage.cpp  MessengerDBStorage.h  MessengerJavascript.cpp  MessengerJavascript.h  MessengerMessages.cpp  MessengerMessages.h  MessengerWaletManager.cpp  MessengerWaletManager.h  messengerdbstorage.cpp  messengerdbstorage.h
src/MetaGate/: MetaGate.cpp  MetaGate.h  MetaGateJavascript.cpp  MetaGateJavascript.h  MetaGateMessages.cpp  MetaGateMessages.h
src/Network/: HttpClient.cpp  HttpClient.h  LocalClient.cpp  LocalClient.h  LocalServer.cpp  LocalServer.h  NetworkTestingTestResult.h  NetwrokTesting.cpp  NetwrokTesting.h  SimpleClient.cpp  SimpleClient.h  UdpSocketClient.cpp  UdpSocketClient.h  WebSocketClient.cpp  WebSocketClient.h
src/NsLookup/: FullWorker.cpp  FullWorker.h  InfrastructureNsLookup.cpp  InfrastructureNsLookup.h  NsLookup.cpp  NsLookup.h  NsLookupStructs.h  NslWorker.cpp  NslWorker.h  TaskManager.cpp  TaskManager.h
src/NsLookup/Workers/: FindEmptyNodesWorker.cpp  FindEmptyNodesWorker.h  FullWorker.cpp  FullWorker.h  MiddleWorker.cpp  MiddleWorker.h  PrintNodesWorker.cpp  (+7 more)
src/ProxyClient/: ProxyClient.cpp  ProxyClient.h  ProxyClientJavascript.cpp  ProxyClientJavascript.h  ProxyClientMessage.cpp  ProxyClientMessage.h  ProxyStatus.h
src/Utils/: Utils.cpp  UtilsJavascript.cpp  UtilsJavascript.h  UtilsManager.cpp  UtilsManager.h
src/WalletNames/: WalletInfo.h  WalletNames.cpp  WalletNames.h  WalletNamesDbRes.h  WalletNamesDbStorage.cpp  WalletNamesDbStorage.h  WalletNamesJavascript.cpp  WalletNamesJavascript.h  WalletNamesMessages.cpp  WalletNamesMessages.h
src/Wallets/: BtcWallet.cpp  BtcWallet.h  EthWallet.cpp  EthWallet.h  GetActualWalletsEvent.cpp  GetActualWalletsEvent.h  Wallet.cpp  Wallet.h  WalletInfo.cpp  WalletInfo.h  WalletRsa.h  Wallets.cpp  Wallets.h  WalletsJavascript.cpp  WalletsJavascript.h
src/auth/: Auth.cpp  Auth.h  AuthJavascript.cpp  AuthJavascript.h
src/btctx/: Base58.cpp  Base58.h  btctx.cpp  btctx.h  wif.cpp  wif.h
src/dns/: datatransformer.cpp  dnspacket.cpp  dnspacket.h  resourcerecord.cpp
src/ethtx/: cert.cpp  cert.h  cert2.cpp  const.h  ethtx.cpp  ethtx.h  rlp.cpp  rlp.h  utils2.cpp  utils2.h
src/openssl_wrapper/: openssl_wrapper.cpp  openssl_wrapper.h
src/proxy/: Proxy.cpp  Proxy.h  ProxyClient.cpp  ProxyClient.h  ProxyJavascript.cpp  ProxyJavascript.h  ProxyServer.cpp  ProxyServer.h  UPnPDevices.cpp  UPnPDevices.h  UPnPRouter.cpp  UPnPRouter.h  WebSocketSender.cpp  WebSocketSender.h  http_parser.c  http_parser.h
src/qt_utilites/: CallbackCallWrapper.cpp  CallbackCallWrapper.h  CallbackWrapper.cpp  CallbackWrapper.h  EventWatcher.cpp  EventWatcher.h  ManagerWrapper.cpp  ManagerWrapper.h  ManagerWrapperImpl.h  QRegister.cpp  QRegister.h  TimerClass.cpp  TimerClass.h  WrapperJavascript.cpp  WrapperJavascript.h  WrapperJavascriptImpl.h  makeJsFunc.h
src/transactions/: Transaction.h  Transactions.cpp  Transactions.h  TransactionsDBRes.h  TransactionsDBStorage.cpp  TransactionsDBStorage.h  TransactionsFilter.h  TransactionsJavascript.cpp  TransactionsJavascript.h  TransactionsMessages.cpp  TransactionsMessages.h  transactionsdbres.h  transactionsdbstorage.cpp  transactionsdbstorage.h
src/utilites/: OopUtils.h  RequestId.h  VersionWrapper.cpp  machine_uid.h  machine_uid_unix.cpp  qrcoder.h  template_helpers.h  unzip.cpp  unzip.h  utils.cpp  utils.h
tests/tst_bignumber/: CMakeLists.txt  tst_bignumber.cpp  tst_bignumber.h  tst_bignumber.pro
tests/tst_transactionsdbstorage/: CMakeLists.txt  tst_transactionsdbstorage.cpp  tst_transactionsdbstorage.h  tst_transactionsdbstorage.pro
tests/tst_wallet/: CMakeLists.txt  tst_Bitcoin.cpp  tst_Bitcoin.h  tst_Ethereum.cpp  tst_Ethereum.h  tst_Metahash.cpp  tst_Metahash.h  tst_main.cpp  tst_rsa.cpp  tst_rsa.h  tst_wallet.cpp  tst_wallet.h  tst_wallet.pro
(+198 files in other folders)
